--- a/.github/.env
+++ b/.github/.env
@@ -8,4 +8,6 @@ openai.api_key = "sk-proj-ugyT7hkS4LtAZqppApuiIwlFs_xbnVU5hSHT5QK2lhiZKygC_42-lU
 # 1.6 
 #ASSISTANT_ID = "asst_wr7lGhAC6UGI7uVIusnT9Yln"
 # 1.7 
-ASSISTANT_ID = "asst_7Piz9HGnl59PhIfCJW2o3BQ4"
+#ASSISTANT_ID = "asst_7Piz9HGnl59PhIfCJW2o3BQ4"
+# 1.8 
+ASSISTANT_ID = asst_yKGE8TycSfV6d7Prph2WsBhP"
